fix: remove overflow-y from display-container

--- a/app/public/main.css
+++ b/app/public/main.css
@@ -103,6 +103,5 @@ body {
 .display-container {
     flex-grow: 1;
     padding: 20px;
-    overflow-y: auto;
     background-color: lightskyblue;
 }
